Bug 128746 - Opening table properties window causes crash in development build
Summary: Opening table properties window causes crash in development build
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, filter:docx, haveBacktrace, regression
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2019-11-12 13:23 UTC by NISZ LibreOffice Team
Modified: 2022-02-14 17:19 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
The document what causes the crash (93.49 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-11-12 13:23 UTC, NISZ LibreOffice Team
Details
The picture showing the problem. (227.58 KB, image/jpeg)
2019-11-12 13:24 UTC, NISZ LibreOffice Team
Details
bt Windows (windbg) (36.12 KB, text/plain)
2019-11-12 14:15 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-11-12 13:23:15 UTC
Description:
The attached sample docx has a table, and when its properties window is opened Writer crashes, and the document recovery manager appears in a debug build.

Steps to Reproduce:
1.	Open the attached document in Writer
2.	Open table properties.
3.	Notice the crash


Actual Results:
Crash happens instead of showing table properties window. Console does not contain useful looking debug information.

Expected Results:
The table properties window should be opened fine.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Verzió: 6.4.0.0.alpha1+ (x64)
Build az.: fdec60b1b475c90434fb9521af98543f669925a5
CPU szálak: 8; OS: Windows 10.0 Build 17134; Felületmegjelenítés: GL; VCL: win; 
Területi beállítások: hu-HU (hu_HU); Felület nyelve: hu-HU
Calc: CL 

Bibisected using bibisect-win64-6.4 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=f0b4b42c39b314019438770c45778da2c6645d6c 
author: Caolán McNamara <caolanm@redhat.com>
committer: Caolán McNamara <caolanm@redhat.com>
summary: rename SwNumFormatListBox back to NumFormatListBox
Comment 1 NISZ LibreOffice Team 2019-11-12 13:23:48 UTC
Created attachment 155743 [details]
The document what causes the crash
Comment 2 NISZ LibreOffice Team 2019-11-12 13:24:11 UTC
Created attachment 155744 [details]
The picture showing the problem.
Comment 3 NISZ LibreOffice Team 2019-11-12 13:25:59 UTC
Adding CC to: Caolán McNamara
Comment 4 Julien Nabet 2019-11-12 13:38:00 UTC
On Win10 with master sources updated today, I don't reproduce the pb but I noticed these logs:
warn:legacy.osl:33672:34656:sw/source/ui/table/tabledlg.cxx:1169: Array index out of range
warn:legacy.osl:33672:34656:sw/source/ui/table/tabledlg.cxx:1169: Array index out of range
warn:legacy.osl:33672:34656:sw/source/ui/table/tabledlg.cxx:1169: Array index out of range
warn:legacy.osl:33672:34656:sw/source/ui/table/tabledlg.cxx:1169: Array index out of range
warn:legacy.osl:33672:34656:sw/source/ui/table/tabledlg.cxx:1169: Array index out of range
warn:legacy.osl:33672:34656:sw/source/ui/table/tabledlg.cxx:1169: Array index out of range
Comment 5 Xisco Faulí 2019-11-12 14:02:19 UTC
Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: a07c637a0e4fe0ab81db70c69decbc946ad37da9
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 6 Xisco Faulí 2019-11-12 14:05:38 UTC
it crashes sometimes... I need to repeat it a few times in order to get the crash
Comment 7 Julien Nabet 2019-11-12 14:15:02 UTC
Created attachment 155750 [details]
bt Windows (windbg)

Quite weirdly, I gave a new try and could this time reproduce this.
Comment 8 Caolán McNamara 2019-11-12 14:42:41 UTC
Given the variability its probably not f0b4b42c39b314019438770c45778da2c6645d6c at fault. I can't get a crash, but I do get the warning Julien gets which looks possibly relevant. 

I've been right clicking on "Latest Photograph" to get to the table properties FWIW in case that makes a difference.
Comment 9 Caolán McNamara 2019-11-12 15:31:47 UTC
https://gerrit.libreoffice.org/plugins/gitiles/core/+/e1ec771c60d1fe03651b24f938589863c3882bc8%5E%21 is probably where things went wrong
Comment 10 Commit Notification 2019-11-12 17:34:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/63c5a1e2aa9e39633c3e644df0d8d9f8cedfc10e

Resolves: tdf#128746 crash in table properties dialog

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Charles Halliday 2022-02-14 16:53:27 UTC Comment hidden (spam)
Comment 12 Gerald Collins 2022-02-14 17:00:12 UTC Comment hidden (spam)
Comment 13 FrankGoode 2022-02-14 17:05:27 UTC Comment hidden (spam)