Resolves: tdf#128746 crash in table properties dialog

Change-Id: I3d7d49cc225afc0dee542205690d56643a0c2e64